--- a/src/res/values/strings.xml
+++ b/src/res/values/strings.xml
@@ -63,5 +63,6 @@
 	<string name="cancel">Cancel</string>
 	<string name="error">Error</string>
 	<string name="error_fw_download">There was an error downloading the file, please try again.</string>
-	<string name="success">Operation Succeeded!</string>
+	<string name="success">Operation Succeeded! </string>
+	<string name="fw_installed">Please remove power to the pod and reconnect power to ensure it is properly reset!</string>
 </resources>
