--- a/src/res/values/strings.xml
+++ b/src/res/values/strings.xml
@@ -65,4 +65,5 @@
 	<string name="error_fw_download">There was an error downloading the file, please try again.</string>
 	<string name="success">Operation Succeeded! </string>
 	<string name="fw_installed">Please remove power to the pod and reconnect power to ensure it is properly reset!</string>
+	<string name="FW_URL">http://woelfware.com/fw/FW_LOG</string>
 </resources>
