minor cleanup and stability improvements

--- a/src/res/values/strings.xml
+++ b/src/res/values/strings.xml
@@ -64,6 +64,6 @@
 	<string name="error">Error</string>
 	<string name="error_fw_download">There was an error downloading the file, please try again.</string>
 	<string name="success">Operation Succeeded! </string>
-	<string name="fw_installed">Please remove power to the pod and reconnect power to ensure it is properly reset!</string>
+	<string name="fw_installed">Please remove power to the pod until BluMote detects that it is no longer connected and then reconnect power. </string>
 	<string name="FW_URL">http://woelfware.com/fw/FW_LOG</string>
 </resources>
